[Java] Write message header before mark file header in the `cluster-mark.dat` file to be able to use SBE features based on the `actingBlockLength` and `actingVersion`.